# gadget.kg

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  entrypoint.sh  messages.py  pyproject.toml  utils.py
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
core/: celery.py  permissions.py  settings.py  urls.py
orders/: admin.py  models.py  serializers.py  tests.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
payment/: admin.py  apps.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py
store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_review.py
user/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_customuser_role.py  0002_remove_customuser_role_alter_customuser_is_active.py
