[project]
name = "gadget-kg"
version = "0.1.0"
description = ""
authors = [
    {name = "chyngyz2507",email = "chyngyzmambetov6@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "gadget"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
